-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
This issue was created by maloo for Aurélien Degrémont <adegremont@nvidia.com>
This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/b030b54c-d084-4259-999d-c05e01d09f23
Test session details:
clients: https://build.whamcloud.com/job/lustre-reviews/102884 - 4.18.0-477.27.1.el8_8.x86_64
servers: https://build.whamcloud.com/job/lustre-reviews/102884 - 4.18.0-477.27.1.el8_lustre.x86_64
libcfs/libcfs/tracefile.c:673:libcfs_debug_msg()) ASSERTION(debug_buf == string_buf) failed [10524.282584] CPU: 1 PID: 269999 Comm: ll_ost00_012 Kdump: loaded Tainted: G OE --------- - - 4.18.0-477.27.1.el8_lustre.x86_64 #1 [10524.284857] Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 [10524.285903] Call Trace: [10524.286558] dump_stack+0x41/0x60 [10524.287492] panic+0xe7/0x2ac [10524.288270] cfs_trace_assertion_failed+0x6d/0x70 [libcfs] [10524.289547] libcfs_debug_msg+0xbc0/0xcd0 [libcfs] [10524.292934] osd_declare_create+0x4df/0x500 [osd_ldiskfs] [10524.294014] ofd_precreate_objects+0x7ac/0x1fe0 [ofd] [10524.295209] ofd_create_hdl+0x5ef/0x1970 [ofd] [10524.296082] tgt_request_handle+0x3f4/0x19d0 [ptlrpc] [10524.298579] ptlrpc_server_handle_request+0x3ca/0xbf0 [ptlrpc] [10524.299784] ptlrpc_main+0xc90/0x15b0 [ptlrpc] [10524.302483] kthread+0x134/0x150 [10524.304059] ret_from_fork+0x35/0x40